# MissionControlTowerSDK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bmc_sdk_installer.nsi  build.bat  build.sh  build_and_stage.bat  build_and_stage.sh  build_bridge.bat  build_example.bat  build_examples.bat  build_lib.bat  cmake_build.bat  create_requirements.py  requirements.txt.sample  setup.py  sign_and_notarize.sh  stage.bat  stage_examples.bat  staging_dirs.txt.in  version.py
.github/workflows/: build.yml  python-build-windows.yml  tests.yml
docs/: README.md
examples/: CMakeLists.txt
examples/i3c_ICM42605/: CMakeLists.txt  main.cpp
examples/i3c_cccs/: CMakeLists.txt  main.cpp
examples/i3c_ibis/: CMakeLists.txt  main.cpp
examples/list_devices/: CMakeLists.txt  main.cpp
examples/mock_notifications/: CMakeLists.txt  main.cpp
examples/nova_breathing_leds/: CMakeLists.txt  main.cpp
examples/sample_app_using_sample_library/: CMakeLists.txt  main.cpp
examples/sample_library/: CMakeLists.txt  sample_library.cpp  sample_library.h
examples/supernova_101/: CMakeLists.txt  main.cpp
examples/supernova_i2c/: CMakeLists.txt  main.cpp
examples/supernova_i2c_benchmark/: CMakeLists.txt  main.cpp
examples/supernova_i2c_benchmark_extended/: CMakeLists.txt  main.cpp
examples/supernova_spi/: CMakeLists.txt  main.cpp
include/: BridgeReader_windows.h  CommandDispatcher.h  CommandManager.h  CommandRequest.h  CommandResponse.h  bridge_reader.h  definitions.h  mct_api.h
python-backend/: bridge.py  mock_command_adaptor.py  mock_host_adapter_sdk.py
sample_app/: CMakeLists.txt  CommandDispatcher.h  main.cpp  sample_app
src/: BridgeReader_windows.cpp  CommandDispatcher.cpp  CommandManager.cpp  bridge_reader.cpp  mct_api.cpp
tests/: CMakeLists.txt  CommandDispatcherGenericFlowTest.cpp  NotificationFlowTest.cpp  SupernovaGenericFlowTest.cpp
