# Add example directories

add_subdirectory(list_devices)
add_subdirectory(nova_breathing_leds)
add_subdirectory(sample_library)
add_subdirectory(sample_app_using_sample_library)
add_subdirectory(supernova_101)
add_subdirectory(supernova_i2c)
add_subdirectory(supernova_i2c_benchmark)
add_subdirectory(mock_notifications)
add_subdirectory(i3c_ibis)
add_subdirectory(i3c_cccs)
add_subdirectory(i3c_ICM42605)
add_subdirectory(supernova_spi)
